test/parser/should_succeed/import2.souc
module mymodule

import /home/souc/lib/mymodule

main() = do
	print "imported"
