test/parser/should_fail/import6.souc
module mymodule

import thing.

main() = do
	print "imported"
